# NetCapture

./: .gitignore  README.md  pixi.toml  recipe-compiled.yaml  recipe.yaml  watch.bat
.claude/: settings.local.json
backend/: capture.py  main.py  profiles.py  pyproject.toml  server.py  setup.py  strip_sources.py
backend/interpreters/: __init__.py  nc_frame.py
backend/netcapture/: __init__.py  __main__.py  _filter.py  _manager.py  _router.py  capture.py  capture_scapy.py  pcap_io.py  profiles.py  watchlists.py
backend/netcapture/interpreters/: __init__.py  nc_frame.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.svelte  app.css  captureService.js  captureService.ts  main.ts  stores.js  stores.ts  types.ts
frontend/src/lib/: Charts.svelte  FieldValue.svelte  NetCapture.svelte  PacketDetail.svelte  PacketTable.svelte  StatsBar.svelte  Toolbar.svelte  captureService.ts  filter.ts  index.ts  netcapture.css  stores.ts  types.ts
frontend/src/lib/components/: AddressBookEditor.svelte  Charts.svelte  ContextMenu.svelte  FieldValue.svelte  FollowStream.svelte  PacketDetail.svelte  PacketTable.svelte  PresetEditor.svelte  ProfileEditor.svelte  StatsBar.svelte  Toolbar.svelte  Watchlist.svelte  WatchlistEditor.svelte
tests/: test_capture.py  test_checksum.py  test_filter.py  test_interpreters.py  test_manager.py  test_nc_frame.py  test_pcap_io.py  test_profiles_watchlists.py  test_router_utils.py
tools/: fault_injector.py  fix_repodata.py  udp_device.py  ws_injector.py
