[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netcapture"
version = "1.0.0"
description = "NetCapture — embeddable real-time network capture and display library"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "websockets>=12",
    "psutil>=6.1",
]

[project.optional-dependencies]
npcap = ["scapy>=2.5"]

[project.scripts]
netcapture = "netcapture.__main__:main"

[tool.setuptools.packages.find]
include = ["netcapture*"]

[tool.setuptools.package-data]
netcapture = ["static/**/*"]
